--- a/app/src/main/res/layout/rate_app_dialog.xml
+++ b/app/src/main/res/layout/rate_app_dialog.xml
@@ -3,7 +3,8 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/transparentBlack"
-    android:id="@+id/dialog_window">
+    android:id="@+id/dialog_window"
+    android:clickable="true">
 
     <RelativeLayout
         android:id="@+id/dialog_container"
@@ -31,7 +32,7 @@
             android:layout_below="@id/dialog_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/rate"
+            android:src="@drawable/update"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
